<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.details.EmployeeDetailsFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />


        <EditText
            android:id="@+id/first_name_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_margin_top"
            android:hint="@string/first_name"
            android:text="@={viewModel.firstName}"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/last_name_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:text="@={viewModel.lastName}"
            app:layout_constraintBottom_toBottomOf="@+id/first_name_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/first_name_et" />


        <EditText
            android:id="@+id/email_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_margin_top"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.email}"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name_et" />

        <EditText
            android:id="@+id/is_too_ge_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/is_too_ge_et"
            android:text="@={viewModel.istooge}"
            app:layout_constraintBottom_toBottomOf="@+id/email_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@+id/email_et" />


        <EditText
            android:id="@+id/password_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_margin_top"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_et" />

        <EditText
            android:id="@+id/password_confirmation_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_confim"
            android:inputType="textPassword"
            android:text="@={viewModel.passwordConfirmation}"
            app:layout_constraintBottom_toBottomOf="@+id/password_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/password_et" />


        <!--       SEPARATOR-->

        <Spinner
            android:id="@+id/department_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_margin_top"
            app:items="@{viewModel.departments}"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_et"
            app:selectedItem="@={viewModel.department}"
            tools:listitem="@layout/item_employee" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/role_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@android:color/darker_gray"
            android:padding="10dp"
            android:text="@string/roles"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/department_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/department_spinner" />

        <!--       SEPARATOR-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="@dimen/details_margin_top"
            android:backgroundTint="@color/blue"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/department_spinner" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/green"
            android:padding="10dp"
            android:text="@{viewModel.isCreateMode() ? @string/create_txt : @string/update}"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/cancel_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@id/cancel_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="viewModel"
            type="com.tonny.employeeadmin.ui.details.EmployeeDetailsViewModel" />
    </data>
</layout>
